<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WisdomCity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="xindiantest">心电测量</string>
    <string name="datamanager">数据管理</string>
    <string name="professortest">专家诊断</string>
    <string name="testsetting">测试设置</string>
    <string name="systemsetting">系统设置</string>
    <string name="helpinfo">帮助信息</string>
    <string name="main_saomiao_device">正在扫描设备...</string>
    <string name="main_open_bluetooth">正在打开蓝牙...</string>
    <string name="no_bluetooth">对不起，检测不到该设备的蓝牙模块</string>
    <string name="tv_bluetooth">蓝牙设备列表</string>
    <string name="tv_name">名称：</string>
    <string name="dizhi">地址：</string>
    <string name="login_name">登录名：</string>
    <string name="email">邮箱：</string>
    <string name="password">密码：</string>
    <string name="new_password">新密码：</string>
    <string name="repassword">密码确认：</string>
    <string name="forget_password">忘记密码</string>
    <string name="get_password">点击此处找回密码</string>
    <string name="get_password_title">找回密码</string>
    <string name="inputusername">请输入用户名</string>
    <string name="inputpassword">请输入密码</string>
    <string name="inputnewpassword">请输入密码</string>
    <string name="remember_name">记住用户</string>
    <string name="denglu">登  陆</string>
    <string name="denglu2">用户登陆</string>
    <string name="zhuce2">用户注册</string>
    <string name="zhuce">注  册</string>
    <string name="cancle">取  消</string>
    <string name="usernamehint">请输入用户名</string>
    <string name="passwordhint">8-20个字符，建议使用字母、数字、符号混合</string>
    <string name="password_config">确认密码:</string>
    <string name="password_confighint">请再次填写上面的密码</string>
    <string name="choose_user_type">用户类别：</string>
    <string name="device_model">设备型号</string>
    <string name="hardware_configuration">硬件配置</string>
    <string name="measuring_range">测量范围</string>
    <string name="soft_code">软件版本</string>
    <string name="hardware_mark">硬件标识</string>
    <string name="hardware_mark_eng">(RFID)</string>
    <string name="port_range">波特率：96000</string>
    <string name="port">端口</string>
    

</resources>