<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="right"
            android:text="@string/login_name"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:background="@drawable/et_selecter"
            android:ellipsize="end"
            android:hint="@string/usernamehint"
            android:maxEms="10"
            android:maxLines="1"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="right"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:background="@drawable/et_selecter"
            android:ellipsize="end"
            android:hint="请输入邮箱地址"
            android:inputType="textEmailAddress"
            android:maxEms="10"
            android:maxLines="1"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="right"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:background="@drawable/et_selecter"
            android:ellipsize="end"
            android:hint="@string/passwordhint"
            android:inputType="textPassword"
            android:maxEms="10"
            android:maxLines="1"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="right"
            android:text="@string/repassword"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_register_passwordconfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:background="@drawable/et_selecter"
            android:ellipsize="end"
            android:hint="@string/password_confighint"
            android:inputType="textPassword"
            android:maxEms="10"
            android:maxLines="1"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:gravity="right"
            android:text="@string/choose_user_type"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinner_user_type_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:background="@drawable/spinner_selector" />
    </LinearLayout>

</LinearLayout>