<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/ll_tabhost_right" />

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/ll_tabhost_right"
            android:background="@drawable/bottom_bg"
            android:orientation="vertical" >

            <LinearLayout style="@style/tabhost_layout" >

                <ImageView
                    android:id="@+id/btn_tabhost_datamanager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tabhost_kcdt" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/datamanager"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout style="@style/tabhost_layout" >

                <ImageView
                    android:id="@+id/btn_tabhost_systemsetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tabhost_setting" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/systemsetting"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout style="@style/tabhost_layout" >

                <ImageView
                    android:id="@+id/btn_tabhost_helpinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tabhost_kjgg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/helpinfo"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tabhost_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/bottom_bg"
            android:orientation="vertical" >

            <LinearLayout style="@style/tabhost_layout" >

                <ImageView
                    android:id="@+id/btn_tabhost_testsetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tabhost_kjgg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/xindiantest"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout style="@style/tabhost_layout" >

                <ImageView
                    android:id="@+id/btn_tabhost_xindiantest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tabhost_setting" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/testsetting"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout style="@style/tabhost_layout" >

                <ImageView
                    android:id="@+id/btn_tabhost_professor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tabhost_kjgg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/professortest"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:orientation="horizontal" />

</TabHost>