<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:background="@drawable/top_bg"
        android:gravity="center"
        android:text="@string/get_password_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/ll_lg1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:layout_width="80dip"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/login_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/et_password_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:background="@drawable/et_selecter"
                        android:ellipsize="end"
                        android:hint="@string/inputusername"
                        android:maxEms="20"
                        android:maxLines="1"
                        android:paddingLeft="10dip"
                        android:singleLine="true"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_lg2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:layout_width="80dip"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:gravity="right"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_password_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:background="@drawable/et_selecter"
                        android:ellipsize="end"
                        android:hint="请输入邮箱地址"
                        android:maxEms="20"
                        android:maxLines="1"
                        android:paddingLeft="10dip"
                        android:singleLine="true"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_get_password"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="30dip"
                android:background="@drawable/top_bg"
                android:gravity="center"
                android:text="@string/get_password"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>