<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_systemsetting"
        layout="@layout/toplayout_user" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/top_systemsetting"
        android:orientation="vertical"
        android:paddingLeft="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:text="设备信息"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/device_model"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView style="@style/setting_tv_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/hardware_configuration"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView style="@style/setting_tv_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/measuring_range"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView style="@style/setting_tv_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center" >

                <TextView
                    android:layout_width="80dip"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/soft_code"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView style="@style/setting_tv_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="80dip"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/hardware_mark"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="80dip"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/hardware_mark_eng"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <TextView style="@style/setting_tv_style" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="蓝牙设置"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/port_range"
                    android:textColor="@color/red"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="系统设置"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_clear_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:text="清除缓存" />

            <Button
                android:id="@+id/btn_change_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:text="修改密码" />

            <Button
                android:id="@+id/btn_clear_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:text="注销用户" />

            <Button
                android:id="@+id/btn_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:text="关于" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:text="检查更新" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>