<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg"
        android:gravity="center"
        android:text="用户中心"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:gravity="center" >

                    <TextView
                        android:layout_width="80dip"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="10dip"
                        android:background="@drawable/et_selecter"
                        android:ellipsize="end"
                        android:hint="@string/inputpassword"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="10dip"
                        android:singleLine="true"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:gravity="center" >

                    <TextView
                        android:layout_width="80dip"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/new_password"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/et_password_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="10dip"
                        android:background="@drawable/et_selecter"
                        android:ellipsize="end"
                        android:hint="@string/inputnewpassword"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="10dip"
                        android:singleLine="true"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:gravity="center" >

                    <TextView
                        android:layout_width="80dip"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:gravity="right"
                        android:text="@string/repassword"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_password_config"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="10dip"
                        android:background="@drawable/et_selecter"
                        android:ellipsize="end"
                        android:hint="@string/inputnewpassword"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="10dip"
                        android:singleLine="true"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="100dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="30dip"
                android:background="@drawable/top_bg"
                android:gravity="center"
                android:text="确定"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>